# crm_exotel_integration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
crm_exotel_integration/: hooks.py  modules.txt
crm_exotel_integration/api/: call.py
crm_exotel_integration/config/: desktop.py  docs.py
crm_exotel_integration/crm_exotel_integration/doctype/ageing_bucket/: ageing_bucket.js  ageing_bucket.json  ageing_bucket.py  test_ageing_bucket.py
crm_exotel_integration/crm_exotel_integration/doctype/crm_exotel_settings/: crm_exotel_settings.js  crm_exotel_settings.json  crm_exotel_settings.py  test_crm_exotel_settings.py
crm_exotel_integration/crm_exotel_integration/doctype/exotel_caller_id_mapping/: exotel_caller_id_mapping.js  exotel_caller_id_mapping.json  exotel_caller_id_mapping.py  test_exotel_caller_id_mapping.py
crm_exotel_integration/crm_exotel_integration/override/: call_log.py  item.py  lead.py
crm_exotel_integration/custom_scripts/: lead.js
crm_exotel_integration/fixtures/: custom_field.json  role.json
crm_exotel_integration/public/js/: item.js  lead_custom.js
