[project]
name = "crm_exotel_integration"
authors = [
    { name = "Akhilam Inc.", email = "raaj@akhilaminc.com"}
]
description = "Exotel Integration For CRM Module In Erpnext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<16.0.0"
erpnext = ">=14.0.0,<16.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
